@@ -18,6 +18,11 @@ require File.dirname(__FILE__) + '/../../spec_helper'
       response.should render_template('render_spec/some_action')
     end
   
+    it "should match a less simple path to another controller" do
+      post 'action_which_renders_template_from_other_controller'
+      response.should render_template('controller_spec/action_with_template')
+    end
+  
     it "should match a symbol" do
       post 'some_action'
       response.should render_template(:some_action)
@@ -30,13 +35,6 @@ require File.dirname(__FILE__) + '/../../spec_helper'
       else
         response.should render_template('render_spec/some_action.rjs')
       end
-    end
-
-    it "should fail on the wrong extension (given rhtml)" do
-      get 'some_action'
-      lambda {
-        response.should render_template('render_spec/some_action.rjs')
-      }.should fail_with("expected \"render_spec/some_action.rjs\", got \"render_spec/some_action\"")
     end
 
     it "should match a partial template (simple path)" do
@@ -53,7 +51,28 @@ require File.dirname(__FILE__) + '/../../spec_helper'
       post 'some_action'
       lambda do
         response.should render_template('non_existent_template')
-      end.should fail_with("expected \"non_existent_template\", got \"some_action\"")
+      end.should fail_with("expected \"non_existent_template\", got \"render_spec/some_action\"")
+    end
+
+    it "should fail without full path when template is associated with a different controller" do
+      post 'action_which_renders_template_from_other_controller'
+      lambda do
+        response.should render_template('action_with_template')
+      end.should fail_with(%Q|expected "action_with_template", got "controller_spec/action_with_template"|)
+    end
+
+    it "should fail with incorrect full path when template is associated with a different controller" do
+      post 'action_which_renders_template_from_other_controller'
+      lambda do
+        response.should render_template('render_spec/action_with_template')
+      end.should fail_with(%Q|expected "render_spec/action_with_template", got "controller_spec/action_with_template"|)
+    end
+
+    it "should fail on the wrong extension (given rhtml)" do
+      get 'some_action'
+      lambda {
+        response.should render_template('render_spec/some_action.rjs')
+      }.should fail_with("expected \"render_spec/some_action.rjs\", got \"render_spec/some_action\"")
     end
 
     it "should fail when TEXT is rendered" do
